libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/INCLCC.NSN
DEFINE DATA LOCAL
END-DEFINE

INCLUDE MYCC

END
